route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: test
  namespace: argocd
  annotations:
    avp.kubernetes.io/path: "kv/data/test"
spec:
  path: /
  to:
    kind: Service
    name: argocd-sample-server
    weight: 100
  port:
    targetPort: 8083
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
    certificate: |
      <certificate>
    key: |
      <key>
